--- a/index.html
+++ b/index.html
@@ -3,231 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>WebShop</title>
-    <script src="cookiefuncties.js"></script>
-    <style>
-        #container, #shoppingcart {
-            margin-bottom: 10px;
-            display: flex;
-            flex-direction: column;
-            width: 100%;
-            border: 1px solid;
-            padding: 2px;
-        }
-
-        button {
-            width: 100px;
-        }
-
-        .row {
-            display: flex;
-        }
-
-        #container .row:nth-child(even) {
-            background-color:darkcyan;
-        }
-
-        #container .row:nth-child(odd) {
-            background-color: darkgoldenrod;
-        }
-
-        .row div:nth-child(1) {
-            width: 10%;
-        }
-
-        .row div:nth-child(2) {
-            width: 20%;
-        }
-
-        .row div:nth-child(3) {
-            width: 20%;
-        }
-
-        .row div:nth-child(4) {
-            width: 10%;
-        }
-
-        .row div:nth-child(5) {
-            width: 10%;
-            text-align: right;
-        }
-
-        .row div:nth-child(6) {
-            width: 30%;
-            text-align: right;
-        }
-
-        .row div:nth-child(7) {
-            width: 20%;
-            text-align: right;
-        }
-
-
-    </style>
-
-    <script>
-        let stock = [
-            {id:1,brand:"Toshiba",type:"Satellite",memory: "8GB",price:800},
-            {id:2,brand:"Acer",type:"Aspire",memory: "16GB",price:1200},
-            {id:3,brand:"Apple",type:"MacBook Pro",memory: "8GB",price:1800},
-            {id:4,brand:"HP",type:"ENVI",memory: "8GB",price:2300},
-            {id:5,brand:"Koffiemachine",type:"BOSCH",memory: "1GB",price:875}
-        ];
-
-
-        // totaal van de winkelwagen
-        function sumcart() {
-            let sum = 0;
-            cart.forEach((o) => {
-                sum+=parseFloat(o.number) * parseFloat(o.price);
-            });
-            return sum;
-        }
-
-        // lees cookie (als deze bestaat natuurlijk)
-        let cart = [];
-        cart = JSON.parse(leesCookie("shoppingcart"));
-        if(cart == null || cart == undefined || cart.length == 0) {
-            cart = [];
-        }
-
-        document.addEventListener("DOMContentLoaded",function () {
-
-            // cart schrijven indien deze data bevat
-            if(cart.length > 0) {
-                readcart(cart);
-            }
-
-            // data uitlezen uit database
-            stock.forEach(function(item) {
-                readitems(item);
-            });
-
-
-            // lees de shoppingcart en maak aan in HTML
-            function readcart(data) {
-                data.forEach(function (item) {
-                    let c = document.getElementById("shoppingcart");
-                    if(c == null || c == undefined) {
-                        c = document.createElement("div");
-                        c.setAttribute("id","shoppingcart");
-                        document.body.appendChild(c);
-                    }
-                    let r = document.createElement("DIV");
-                    r.setAttribute("class","row");
-                    c.appendChild(r);
-                    for (p in item) {
-                        let ele = document.createElement("DIV");
-
-                        if(p === "price") {
-                            ele.innerHTML = `&euro; ${item[p]}`;
-                        } else {
-                            ele.innerText = item[p];
-                        }
-
-                        r.appendChild(ele);
-                    }
-                    let ele = document.createElement("DIV");
-                    let b = document.createElement("button");
-                    b.addEventListener("click",function () {
-                        removefromcart(item,r);
-                    });
-                    b.innerText = "Delete";
-                    ele.appendChild(b);
-                    r.appendChild(ele);
-                });
-
-            }
-
-            // lees de database en maak HTML tabel
-            function readitems(data) {
-                let c = document.getElementById("container");
-                let r = document.createElement("DIV");
-                r.setAttribute("class","row");
-                c.appendChild(r);
-
-                for (p in data) {
-                    let ele = document.createElement("DIV");
-                    if(p === "price") {
-                        ele.innerHTML = `&euro; ${data[p]}`;
-                    } else {
-                        ele.innerText = data[p];
-                    }
-                    r.appendChild(ele);
-                }
-
-                let ele = document.createElement("DIV");
-                let b = document.createElement("button");
-                b.addEventListener("click",function () {
-                    addtocart(data);
-                });
-                b.innerText = "Order";
-                ele.appendChild(b);
-                r.appendChild(ele);
-            }
-
-            // voegt een item toe aan de shoppingcart
-            function addtocart(item) {
-                let item_exist_incart = false;
-                let cart_item = null;
-                for(let i = 0;i<cart.length;i++) {
-                    if(cart[i].id == item.id)  {
-                        item_exist_incart = true;
-                        cart_item = cart[i];
-                        break;
-                    }
-                }
-
-                // item allready exist
-                if(item_exist_incart) {
-                    cart_item.number +=1;
-                } else {
-                    item.number = 1;
-                    cart.push(item);
-                    readcart(cart);
-
-                };
-                updatecart();
-
-                maakCookie("shoppingcart",JSON.stringify(cart),7);
-            }
-
-            // verwijderd een item uit de shoppingcart
-            function removefromcart(item,r) {
-                r.remove();
-                cart.splice(cart.indexOf(item),1);
-                maakCookie("shoppingcart",JSON.stringify(cart),7);
-                if(cart.length==0) {
-                    const myNode = document.getElementById("shoppingcart");
-                    myNode.remove();
-                }
-            }
-
-            // update de shoppingcart
-            function updatecart() {
-                // remove complete cart first
-                const myNode = document.getElementById("shoppingcart");
-                while (myNode.firstChild) {
-                    myNode.removeChild(myNode.lastChild);
-                }
-                readcart(cart);
-            }
-
-
-        });  //DOM Content Loaded
-    </script>
-
-
-
+    <script src="js/cookiefuncties.js"></script>
+    <script src="js/script.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
-
-<div id="container">
-
-</div>
-
+<div id="container"></div>
+<div id="shoppingcart"></div>
 <div id="total"></div>
-
 
 </body>
 </html>
